kubernetes/apps/default/paseo/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paseo
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - paseo.${SECRET_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-oauth-admin
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: paseo
          port: 6767
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
