kubernetes/apps/default/paseo/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paseo-tailscale
  namespace: default
  annotations:
    tailscale.com/tags: tag:paseo
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: paseo
      port:
        number: 6767
  tls:
    - hosts:
        - paseo
